添加 AI 聊天助手功能

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <h2 class="text-lg font-semibold text-gray-700">AI学习</h2>
                         <ul class="ml-4 space-y-2">
                             <li>
-                                <a href="#" class="text-gray-500">敬请期待...</a>
+                                <a href="ai-chat/index.html" class="text-blue-600 hover:text-blue-800">AI 助手</a>
                             </li>
                         </ul>
                     </div>
