--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
                         </ul>
                     </div>
                     <div class="space-y-2">
+                        <h2 class="text-lg font-semibold text-gray-700">小游戏</h2>
+                        <ul class="ml-4 space-y-2">
+                            <li>
+                                <a href="https://hanoi.skyrover.top/" class="text-blue-600 hover:text-blue-800">汉诺塔</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="space-y-2">
                         <h2 class="text-lg font-semibold text-gray-700">AI学习</h2>
                         <ul class="ml-4 space-y-2">
                             <li>
