增加轻量天气入口

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                             <li>
                                 <a href="tools/bmi.html" class="text-blue-600 hover:text-blue-800">BMI 计算器</a>
                             </li>
+                            <li>
+                                <a href="https://weather.skyrover.top/" class="text-blue-600 hover:text-blue-800">轻量天气</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="space-y-2">
