--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                             <li>
                                 <a href="https://hanoi.skyrover.top/" class="text-blue-600 hover:text-blue-800">汉诺塔</a>
                             </li>
+                            <li>
+                                <a href="https://catchus.skyrover.top/" class="text-blue-600 hover:text-blue-800">捕食沙丁鱼</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="space-y-2">
