--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Match的个人空间</title>
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PJVEX995GC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-PJVEX995GC');
+    </script>
 </head>
 <body class="bg-gray-100 min-h-screen">
     <div class="flex">
